--- a/templates/shortcodes/gallery.html
+++ b/templates/shortcodes/gallery.html
@@ -1,7 +1,7 @@
 <div>
     {% for asset in page.assets -%}
       {%- if asset is matching("[.](jpg|jpeg|webp)$") -%}
-      {% set image = resize_image(path=asset, height=500, op="fit_height") %}
+      {% set image = resize_image(path=asset, height=500, width=400) %}
         <a href="{{ image.url }}" target="_blank">
           <img src="{{ image.url }}" title="{{ asset | split(pat='/') | last | split(pat='.') | first }}"/>
         </a>
