--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 {% set p = section | default(value=page) %}
 {% set title = p.title | default(value="Home") %}
 {% set description = p.description | default(value="") %}
-{% set full_title = title ~ " ⋅ " ~ Diana & Jon %}
+{% set full_title = title ~ " ⋅ " ~ "Diana & Jon" %}
 <!DOCTYPE HTML>
 <html lang="en">
 
