--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@
       <li class="main-list underline-on-hover"><a href="/wedding-party">Wedding Party</a></li>
       <li class="main-list underline-on-hover"><a href="/our-story">Our Story</a></li>
       <li class="main-list underline-on-hover"><a href="/schedule">Schedule</a></li>
-      <li class="main-list underline-on-hover"><a href="/accomodations">Accomodations</a></li>
+      <li class="main-list underline-on-hover"><a href="/accommodations">Accommodations</a></li>
       <li class="main-list underline-on-hover"><a href="/registry">Registry</a></li>
       <li class="main-list underline-on-hover"><a href="/rsvp">RSVP</a></li>
      </ul>
