--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="description" content="{{ description }}" />
-  <!--<link rel="icon" type="image/svg+xml" href="{{ config.extra.icon }}" />-->
+  <link rel="icon" type="image/svg+xml" href="{{ config.extra.icon }}" />
   <meta property="og:title" content="{{ full_title }}" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="{{ config.extra.site_name }}" />
