--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <li class="mobile-list"><a href="/our-story">Our Story</a></li>
     <li class="mobile-list"><a href="/schedule">Schedule</a></li>
     <li class="mobile-list"><a href="/accommodations">Accommodations</a></li>
-    <li class="mobile-list"><a href="https://www.crateandbarrel.com/">Registry</a></li>
+    <li class="mobile-list"><a href="/registry">Registry</a></li>
     <li class="mobile-list"><a href="/rsvp">RSVP</a></li>
 </ul>
 
