--- a/templates/base.html
+++ b/templates/base.html
@@ -56,8 +56,8 @@
       <li class="main-list underline-on-hover"><a href="/our-story">Our Story</a></li>
       <li class="main-list underline-on-hover"><a href="/schedule">Schedule</a></li>
       <li class="main-list underline-on-hover"><a href="/accommodations">Accommodations</a></li>
-      <li class="main-list underline-on-hover"><a href="/registry">Registry</a></li>
       <li class="main-list underline-on-hover"><a href="/rsvp">RSVP</a></li>
+      <li class="main-list underline-on-hover"><a href="/faq">FAQ</a></li>
      </ul>
      <div class="header-line"></div>
   </header>
