--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,8 @@
     <li class="mobile-list"><a href="/our-story">Our Story</a></li>
     <li class="mobile-list"><a href="/schedule">Schedule</a></li>
     <li class="mobile-list"><a href="/accommodations">Accommodations</a></li>
-    <li class="mobile-list"><a href="/registry">Registry</a></li>
     <li class="mobile-list"><a href="/rsvp">RSVP</a></li>
+    <li class="mobile-list"><a href="/faq">FAQ</a></li>
 </ul>
 
 <p style="font-size: 26px; text-align:center">
