--- a/templates/base.html
+++ b/templates/base.html
@@ -58,6 +58,7 @@
       <li class="main-list underline-on-hover"><a href="/accommodations">Accommodations</a></li>
       <li class="main-list underline-on-hover"><a href="/rsvp">RSVP</a></li>
       <li class="main-list underline-on-hover"><a href="/faq">FAQ</a></li>
+      <li class><a href="https://www.lyft.com/api/rideprograms/prepaid-ride-programs/1938923587838643180/pdf?info_token=pug5_0E-hNbfiFgDXOA-bDUxSsNu2I_fos1I-_6s6kA" class="red-text">Transportation Details!</a></li>
      </ul>
      <div class="header-line"></div>
   </header>
