--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
 {{ section.content | safe }}
 
 <ul class="mobile-list">
+    <li class="mobile-list"><a href="https://www.lyft.com/api/rideprograms/prepaid-ride-programs/1938923587838643180/pdf?info_token=pug5_0E-hNbfiFgDXOA-bDUxSsNu2I_fos1I-_6s6kA" class="red-text">Transportation Details!</a></li>
     <li class="mobile-list"><a href="/wedding-party">Wedding Party</a></li>
     <li class="mobile-list"><a href="/our-story">Our Story</a></li>
     <li class="mobile-list"><a href="/schedule">Schedule</a></li>
