--- a/sass/site.scss
+++ b/sass/site.scss
@@ -251,14 +251,25 @@ main iframe {
         border-radius: 5px;
         transition: background-color 0.3s ease;
     }
+    .red-text {
+    color: red;
+}
 
     .main-list {
         display: none; 
     }
+
     .mobile-list {
         display: block;
     }
     
+}
+
+.mobile-list a.red-text {
+    color: red; /* This will now override the color set by .mobile-list a */
+}
+.main-list a.red-text {
+    color: red;
 }
 
 
